[tool.poetry]
name = "pymon"
version = "0.0.0"
description = "Common simple python monads for more readable and maintainable pipeline-based code."
authors = ["Ilya Katun <katun.ilya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
