[tool.poetry]
name = "pymon"
version = "0.0.3"
description = "Common simple python monads for more readable and maintainable pipeline-based code."
authors = ["Ilya Katun <katun.ilya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
isort = "^5.10.1"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
