[tool.poetry]
name = "fundom"
version = "0.0.8"
description = "Common simple python monads for more readable and maintainable pipeline-based code."
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
isort = "^5.10.1"
asyncio = "^3.4.3"
pytest-asyncio = "^0.18.1"
flake8-bugbear = "^22.3.23"
flake8-comprehensions = "^3.8.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-isort = "^4.1.1"
pep8-naming = "^0.12.1"
flake8-string-format = "^0.3.0"
flake8-bandit = "^3.0.0"
flake8-builtins = "^1.5.3"
flake8-black = "^0.3.2"
flake8-requirements = "^1.5.3"
handsdown = "^1.1.0"
pre-commit = "^2.18.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
